pulumi/baltic-sea/yaml/olaf-radicke-de/ingress.yaml
---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     IngressRoute
metadata:
  name:                   olaf-radicke-de
spec:
  entryPoints:
                          - web
                          - websecure
  routes:
    - match:              Host(`olaf-radicke.de`) && PathPrefix(`/`)
      kind:               Rule
      services:
        - name:           olaf-radicke-de
          port:           80
      middlewares:
        - name:           olaf-radicke-de
  tls:
    secretName:           olaf-radicke-de

---

apiVersion:               traefik.containo.us/v1alpha1
kind:                     Middleware
metadata:
  name:                   olaf-radicke-de
spec:
  redirectScheme:
    scheme:               https
    permanent:            true
